Add java options to all java commands that support reindex