@@ -178,8 +178,8 @@ if [[ $skip -eq 0 ]]; then
     echo "  Generate indexes"
     # need to override this setting to make sure it's not too big
     export NCI_EVS_BULK_LOAD_INDEX_BATCH_SIZE=1000
-    echo "java $local -Xmx4800M -jar $jar --terminology $terminology -d $dir --forceDeleteIndex"
-    java $local -XX:+ExitOnOutOfMemoryError -Xmx4800M -jar $jar --terminology $terminology -d $dir --forceDeleteIndex
+    echo "java --add-opens=java.base/java.io=ALL-UNNAMED $local -Xmx4800M -jar $jar --terminology $terminology -d $dir --forceDeleteIndex"
+    java --add-opens=java.base/java.io=ALL-UNNAMED $local -XX:+ExitOnOutOfMemoryError -Xmx4800M -jar $jar --terminology $terminology -d $dir --forceDeleteIndex
     if [[ $? -ne 0 ]]; then
         echo "ERROR: unexpected error building indexes"
         exit 1
